# Genom2

./: CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: sample_gwas_results.py  sample_mrsa_data.py  sample_phage_data.py  sample_phylogeny.py
pages/: 1_Genomic_Determinants.py  2_Regulatory_Circuits.py  3_Surveillance_Dashboard.py  4_RNA_Dynamics.py
utils/: data_loader.py  ml_models.py  phage_calculator.py  rna_analysis.py  visualization.py
