[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "folium>=0.19.5",
    "plotly>=6.0.1",
    "streamlit-folium>=0.25.0",
    "streamlit>=1.45.0",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "numpy>=2.2.5",
]
